# mcp-diagrams

./: README.md  pyproject.toml
src/mcp_server_diagrams/: __init__.py  __main__.py  server.py
