[tool.poetry]
name = "mcp-diagrams"
version = "0.1.0"
description = "A model context protocol server for mingrammer/diagrams"
authors = ["Alex Holmes <alex@sed.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^4.7"
mcp = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

